@@ -1,13 +1,0 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-cxxflags=@gmtl_cxxflags@
-includedir=@includedir@
-version_major=@version_major@
-version_minor=@version_minor@
-version_patch=@version_patch@
-
-Name: GMTL
-Version: ${version_major}.${version_minor}.${version_patch}
-Description: Generic Math Template Library
-Requires:
-Cflags: -I${includedir} ${cxxflags}
